--- a/css/style.css
+++ b/css/style.css
@@ -1313,3 +1313,94 @@ body {
 .cta__button {
   margin-top: 17px;
 }
+
+/*****************************************
+// blog
+******************************************/
+.blog__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .blog__inner {
+    padding-left: 20px;
+    padding-right: 20px;
+    max-width: 820px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (width >= 1280px) {
+  .blog__inner {
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: 1180px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.blog__contents {
+  margin-top: 46px;
+  display: grid;
+  gap: 16px;
+  grid-template-columns: 1fr;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .blog__contents {
+    margin-top: 60px;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (width >= 1280px) {
+  .blog__contents {
+    margin-top: 60px;
+    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.blog-card {
+  background: #fff;
+  padding: 12px 15px 16px;
+  width: 360px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  -webkit-box-shadow: 5px 7px 34px 0px #f1f1f1;
+          box-shadow: 5px 7px 34px 0px #f1f1f1;
+}
+
+.blog-card__img {
+  width: 330px;
+}
+
+.blog-card__title {
+  margin-top: 6px;
+  color: #333;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.blog-card__text {
+  margin-top: 4px;
+  color: #333;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+.blog__button {
+  margin-top: 46px;
+  text-align: center;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .blog__button {
+    margin-top: 60px;
+  }
+}
+@media (width >= 1280px) {
+  .blog__button {
+    margin-top: 60px;
+  }
+}
