--- a/css/style.css
+++ b/css/style.css
@@ -1067,6 +1067,15 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+@media (width >= 768px) and (width <= 1279px) {
+  .company__inner {
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 @media (width >= 1280px) {
   .company__inner {
     padding-left: 30px;
@@ -1364,7 +1373,7 @@ body {
 .blog-card {
   background: #fff;
   padding: 12px 15px 16px;
-  width: 360px;
+  max-width: 390px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 4px;
@@ -1373,7 +1382,7 @@ body {
 }
 
 .blog-card__img {
-  width: 330px;
+  width: 100%;
 }
 
 .blog-card__title {
