--- a/sass/style.scss
+++ b/sass/style.scss
@@ -989,6 +989,14 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 
+  @include mq(tb) {
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: calc(900px + 30px * 2);
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   @include mq(pc) {
     padding-left: 30px;
     padding-right: 30px;
@@ -1293,7 +1301,7 @@ body {
 .blog-card {
   background: #fff;
   padding: 12px 15px 16px;
-  width: 360px;
+  max-width: calc(360px + 15px * 2);
   margin-left: auto;
   margin-right: auto;
   border-radius: 4px;
@@ -1301,7 +1309,7 @@ body {
 }
 
 .blog-card__img {
-  width: 330px;
+  width: 100%;
 }
 
 .blog-card__title {
