--- a/css/style.css
+++ b/css/style.css
@@ -1381,7 +1381,7 @@ body {
           box-shadow: 5px 7px 34px 0px #f1f1f1;
 }
 
-.blog-card__img {
+.blog-card__img img {
   width: 100%;
 }
 
@@ -1412,4 +1412,122 @@ body {
   .blog__button {
     margin-top: 60px;
   }
+}
+
+/*****************************************
+// seminar
+******************************************/
+.seminar {
+  background: #fff;
+}
+
+.seminar__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .seminar__inner {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media (width >= 1280px) {
+  .seminar__inner {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+.seminar__contents {
+  margin-top: 42px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 36px;
+}
+
+.seminar__content {
+  padding: 26px 12px 30px;
+  border-radius: 6px;
+  background: #fff;
+  -webkit-box-shadow: 5px 7px 34px 0px #f1f1f1;
+          box-shadow: 5px 7px 34px 0px #f1f1f1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 22px;
+}
+
+.seminar-card__img {
+  text-align: center;
+}
+.seminar-card__img img {
+  max-width: 324px;
+}
+
+.seminar-card__meta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 8px;
+}
+
+.seminar-card__tag {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 700;
+  padding: 3px 10px;
+  border-radius: 2px;
+  background: #2392db;
+  min-width: 63px;
+  text-align: center;
+}
+
+.seminar-card__date {
+  text-align: right;
+  font-weight: 500;
+}
+
+.seminar-card__title {
+  margin-top: 10px;
+  color: #333;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.seminar-card__text {
+  margin-top: 14px;
+  color: #333;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.seminar-card__button {
+  margin-top: 24px;
+  text-align: right;
+}
+.seminar-card__button a {
+  display: inline-block;
+  color: #2392db;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  padding: 7px 35px;
+  border-radius: 2px;
+  border: 1px solid #2392db;
+  -webkit-box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+          box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+}
+
+.seminar__button {
+  margin-top: 46px;
+  text-align: center;
 }
