--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1309,7 +1309,9 @@ body {
 }
 
 .blog-card__img {
-  width: 100%;
+  img {
+    width: 100%;
+  }
 }
 
 .blog-card__title {
@@ -1337,4 +1339,118 @@ body {
   @include mq(pc) {
     margin-top: 60px;
   }
+}
+
+/*****************************************
+// seminar
+******************************************/
+.seminar {
+  background: #fff;
+}
+
+.seminar__inner {
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @include mq(tb) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  @include mq(pc) {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+.seminar__title {
+}
+
+.seminar__contents {
+  margin-top: 42px;
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+}
+
+.seminar__link {
+}
+
+.seminar__content {
+  padding: 26px 12px 30px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 5px 7px 34px 0px #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
+
+.seminar-card {
+}
+
+.seminar-card__img {
+  text-align: center;
+  img {
+    max-width: 324px;
+  }
+}
+
+.seminar-card__body {
+}
+
+.seminar-card__meta {
+  display: flex;
+  gap: 8px;
+}
+
+.seminar-card__tag {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 700;
+  padding: 3px 10px;
+  border-radius: 2px;
+  background: #2392db;
+  min-width: 63px;
+  text-align: center;
+}
+
+.seminar-card__date {
+  text-align: right;
+  font-weight: 500;
+}
+
+.seminar-card__title {
+  margin-top: 10px;
+  color: #333;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.seminar-card__text {
+  margin-top: 14px;
+  color: #333;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.seminar-card__button {
+  margin-top: 24px;
+  text-align: right;
+  a {
+    display: inline-block;
+    color: #2392db;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    padding: calc(8px - 1px) calc(36px - 1px);
+    border-radius: 2px;
+    border: 1px solid #2392db;
+    box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
+  }
+}
+
+.seminar__button {
+  margin-top: 46px;
+  text-align: center;
 }
