--- a/css/style.css
+++ b/css/style.css
@@ -1429,12 +1429,18 @@ body {
   .seminar__inner {
     padding-left: 20px;
     padding-right: 20px;
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media (width >= 1280px) {
   .seminar__inner {
     padding-left: 30px;
     padding-right: 30px;
+    max-width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -1448,6 +1454,18 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 36px;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .seminar__contents {
+    margin-top: 38px;
+    gap: 40px;
+  }
+}
+@media (width >= 1280px) {
+  .seminar__contents {
+    margin-top: 38px;
+    gap: 40px;
+  }
 }
 
 .seminar__content {
@@ -1465,12 +1483,41 @@ body {
           flex-direction: column;
   gap: 22px;
 }
+@media (width >= 768px) and (width <= 1279px) {
+  .seminar__content {
+    padding: 24px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 30px;
+  }
+}
+@media (width >= 1280px) {
+  .seminar__content {
+    padding: 24px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 30px;
+  }
+}
 
 .seminar-card__img {
   text-align: center;
+  max-width: 324px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .seminar-card__img img {
-  max-width: 324px;
+  width: 100%;
+}
+
+.seminar-card__body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .seminar-card__meta {
@@ -1526,8 +1573,28 @@ body {
   -webkit-box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
           box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
 }
+@media (width >= 768px) and (width <= 1279px) {
+  .seminar-card__button {
+    margin-top: 20px;
+  }
+}
+@media (width >= 1280px) {
+  .seminar-card__button {
+    margin-top: 20px;
+  }
+}
 
 .seminar__button {
   margin-top: 46px;
   text-align: center;
+}
+@media (width >= 768px) and (width <= 1279px) {
+  .seminar__button {
+    margin-top: 40px;
+  }
+}
+@media (width >= 1280px) {
+  .seminar__button {
+    margin-top: 40px;
+  }
 }
